testsuite/escript/errors/errors001-two-functions-same-name.src
// reported in https://forums.polserver.com/viewtopic.php?f=54&t=6140
function foo( x )
  print( x );
endfunction

function foo( y )
  print( y );
endfunction

foo( "a" );
