testsuite/escript/errors/errors001-two-functions-same-name.err
errors001-two-functions-same-name.src:6:1: error: Function 'foo' defined more than once.
